# OpenHA

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
CrossAgent/MTRL/plot/: plot.py  plot_generalization.py
CrossAgent/SFT/sft_script/: log.txt  model_merger.sh  vla-qwen2-vl-7b-cross.sh  vla-qwen2-vl-7b-grounding_250929.sh  vla-qwen2-vl-7b-mix_250910.sh  vla-qwen2-vl-7b-motion_250929.sh  vla-qwen2-vl-7b-text_250923.sh  vla-qwen2-vl-7b-text_250929.sh
CrossAgent/SFT/wandb/: latest-run
CrossAgent/STRL/custom_reward_funcs/: coa_craft.py  vla_craft.py
CrossAgent/STRL/data_processor/: balance_coa.py  filter_craft.py  reject_sampling.py  reject_sampling_copy.py  vis_data.py
CrossAgent/STRL/inference/: replace_dataset.py
CrossAgent/STRL/rollout_data_dir/: 1.jsonl  17.jsonl  19.jsonl  2.jsonl  20.jsonl  24.jsonl  27.jsonl  29.jsonl  3.jsonl  30.jsonl  31.jsonl  34.jsonl  35.jsonl  36.jsonl  39.jsonl  41.jsonl  42.jsonl  44.jsonl  46.jsonl  47.jsonl  48.jsonl  49.jsonl  50.jsonl  51.jsonl  54.jsonl  56.jsonl  58.jsonl  59.jsonl  6.jsonl  61.jsonl  62.jsonl  66.jsonl  67.jsonl  7.jsonl  73.jsonl  74.jsonl  75.jsonl  (+3 more)
CrossAgent/examples/: deployee.sh  rollout_online.sh
RL/MTRL/: .gitignore
RL/examples/: rollout_online.sh
examples/: rollout_openha.py
openagents/agents/: base.py  base_agent.py  openha.py
openagents/assets/: __init__.py  event_description.json  instructions.json  open_gui_actions.json  tag_items.json
openagents/envs/: __init__.py  env.py
openagents/utils/: extract.py  file_op.py  img_utils.py  render.py
scripts/: openha.sh
(+228 files in other folders)
